--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -165,13 +165,24 @@ a {
     margin-top: 70px;
     justify-content: space-between;
     align-items: center;
-    max-height: 82px;
+}
+
+.clients .images a {
+    padding: 0 42px;
+    height: 90px;
+    display: flex;
+    align-items: center;
+    border-radius: 12px;
+}
+
+.clients .images a:hover {
+    box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.1);
 }
 
 /* ============ Guides */
 .guides {
     margin-top: 40px;
-    padding: 90px 0 79px;
+    padding: 93px 0 79px;
 }
 
 .guides .sub-title {
