--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -67,6 +67,7 @@ a {
 
 .hero-wrap {
     display: flex;
+    justify-content: center;
     flex-direction: column;
     position: relative;
     background: #e6f0ff;
@@ -112,15 +113,11 @@ a {
     border-radius: 8px;
 }
 
-.hero {
-    margin-top: 130px;
-}
-
-.hero .info {
+.info {
     width: 51%;
 }
 
-.hero .sub-title {
+.sub-title {
     color: #687690;
     font-size: 1.8rem;
     font-weight: 500;
@@ -128,7 +125,7 @@ a {
     line-height: 1.5;
 }
 
-.hero .title {
+.title {
     margin-top: 8px;
     color: #000336;
     font-size: 6.4rem;
@@ -136,7 +133,7 @@ a {
     line-height: 1.19; /* 118.75% */
 }
 
-.hero .desc {
+.desc {
     margin-top: 30px;
     color: #5a6473;
     font-size: 1.78rem;
