--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,7 @@
 * {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 :root {
@@ -61,8 +63,10 @@ a {
     background: #e6f0ff;
     padding-top: 26px;
     position: sticky;
-    top: -26px;
+    top: 0;
     z-index: 1;
+    margin: 0;
+    width: 100%;
 }
 
 .hero-wrap {
@@ -77,7 +81,6 @@ a {
 .navbar {
     display: flex;
     align-items: center;
-    /* padding-top: 38px; */
     padding: 12px 0;
 }
 
