--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -257,6 +257,15 @@
         padding-bottom: 30px;
     }
 
+    .row-qty .qty-item {
+        text-align: center;
+        margin-top: 20px;
+    }
+
+    .stats .qty-item .qty-desc {
+        margin: 10px 0 0 0;
+    }
+
     .copyright {
         text-align: right;
     }
